--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "015-watop",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "build": "webpack --config webpack.production.js",
     "build-dev": "webpack --config webpack.dev.js",
@@ -16,12 +15,15 @@
     "css-loader": "^6.5.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.17.1",
     "html-webpack-plugin": "^5.5.0",
     "image-minimizer-webpack-plugin": "^2.2.0",
     "imagemin-optipng": "^8.0.0",
     "mini-css-extract-plugin": "^2.4.4",
+    "prettier": "^2.4.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.64.0",
     "webpack-cli": "^4.9.1",
